# gemini-pool

./: README.md  README.zh-CN.md  deploy.sh  start.sh
gemini-pool/: .env.example  Cargo.toml  Dockerfile
gemini-pool/src/: main.rs
gemini-pool/web/: index.html  login.html  management.html
gemini-pool/web/css/: style.css
gemini-pool/web/js/: i18n.js  login.js  management.js  matrix.js  particles.js
